--- a/_posts/2014-09-22-services-2.markdown
+++ b/_posts/2014-09-22-services-2.markdown
@@ -2,9 +2,9 @@
 layout: default
 img: dog.png
 category: Services
-title: 3D Device Mockups<br>by PSDCovers
+title: Gran Compatibilidad
 description: |
 ---
-  Turn your 2D designs into high quality, 3D
-  product shots in seconds using free Photoshop actions by [PSDCovers](http://www.psdcovers.com/)! Visit
-  their website to download some of their awesome, free photoshop actions!
+**Nuestro producto no necesita hardware especializado**
+
+> Cualquier ordenador o tablet Windows es compatible con nuestra aplicación. Esto se traduce a un costo inicial reducido comparado con los competidores. El producto esta listo para usarse apenas se "saca de la caja"
